// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className=""
>
  <label
    className="MuiFormControlLabel-root-1"
  >
    <span
      className="MuiSwitch-root-5"
    >
      <span
        className="MuiButtonBase-root-24 MuiIconButton-root-18 MuiSwitchBase-root-14 MuiSwitch-switchBase-8 MuiSwitch-colorPrimary-10"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-23"
        >
          <span
            className="MuiSwitch-icon-6"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-17"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="switch"
          />
        </span>
        <span
          className="MuiTouchRipple-root-27"
        />
      </span>
      <span
        className="MuiSwitch-bar-13"
      />
    </span>
    <span
      className="MuiTypography-root-34 MuiTypography-body1-43 MuiFormControlLabel-label-4"
    >
      Title
    </span>
  </label>
</div>
`;

exports[`renders disabled 1`] = `
<div
  className=""
>
  <label
    className="MuiFormControlLabel-root-1 MuiFormControlLabel-disabled-3"
  >
    <span
      className="MuiSwitch-root-5"
    >
      <span
        className="MuiButtonBase-root-24 MuiButtonBase-disabled-25 MuiIconButton-root-18 MuiIconButton-disabled-22 MuiSwitchBase-root-14 MuiSwitch-switchBase-8 MuiSwitch-colorPrimary-10 MuiSwitchBase-disabled-16 MuiSwitch-disabled-12"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
      >
        <span
          className="MuiIconButton-label-23"
        >
          <span
            className="MuiSwitch-icon-6"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-17"
            disabled={true}
            onChange={[Function]}
            type="checkbox"
            value="switch"
          />
        </span>
      </span>
      <span
        className="MuiSwitch-bar-13"
      />
    </span>
    <span
      className="MuiTypography-root-34 MuiTypography-body1-43 MuiFormControlLabel-label-4 MuiFormControlLabel-disabled-3"
    >
      Title
    </span>
  </label>
</div>
`;

exports[`renders with helper text 1`] = `
<div
  className=""
>
  <label
    className="MuiFormControlLabel-root-1"
  >
    <span
      className="MuiSwitch-root-5"
    >
      <span
        className="MuiButtonBase-root-24 MuiIconButton-root-18 MuiSwitchBase-root-14 MuiSwitch-switchBase-8 MuiSwitch-colorPrimary-10"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-23"
        >
          <span
            className="MuiSwitch-icon-6"
          />
          <input
            checked={false}
            className="MuiSwitchBase-input-17"
            disabled={false}
            onChange={[Function]}
            type="checkbox"
            value="switch"
          />
        </span>
        <span
          className="MuiTouchRipple-root-27"
        />
      </span>
      <span
        className="MuiSwitch-bar-13"
      />
    </span>
    <span
      className="MuiTypography-root-34 MuiTypography-body1-43 MuiFormControlLabel-label-4"
    >
      Title
    </span>
  </label>
  <p
    className="MuiFormHelperText-root-59"
  >
    test
  </p>
</div>
`;
